# libdnf-plugin-swidtags

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  libdnf-plugin-swidtags.spec  libdnf5-plugin-swidtags.spec  swidtags.conf  swidtags_plugin.c  swidtags_plugin.cpp  test.sh
.github/workflows/: build-test.yaml
tests/: Dockerfile  dbus-start  require-old-hello.spec  test-libdnf-swidtags.repo
tests/repo/noarch/: require-old-hello-1.0-1.fc32.noarch.rpm
tests/repo/repodata/: 39b1d7c209549a71374d92864a38eb5f131f850494e63e22eeb737a51acb099d-primary.sqlite.bz2  4792e290cde7af56132bc015c8118ac12a367f42af705aebf203cac7a2d7ec07-filelists.sqlite.bz2  854aac025975045bc7750c45cf7af7f899ffcbdced6a35e6c505c5583d91e051-primary.sqlite.bz2  b8c04e50a0d1679234532fd7b16fc26637cb3116dc74295d4fb727e10ec04551-filelists.sqlite.bz2  c846b7dc27a5060c7f22ad431e53d07eafc5ce6fd2ba7217c347ccc34263cb42-other.sqlite.bz2  ce80781cbe3efb9575fe175516fd3d9cc72a439bdabc6ebd94ce83395190a2de-other.sqlite.bz2  repomd.xml
